<resources>
    <string name="app_name">Covid19 India</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="Deaths">Deceased</string>
    <string name="lastUpdate">Last Updated</string>
    <string name="menu_home">Home</string>
    <string name="menu_states">States</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
