<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLastUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/lastUpdate"
        android:textSize="19sp"
        app:fontFamily="@font/open_sans" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLastUpdate"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardConfirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_columnSpan="2"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtConfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="#FD073A"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtConfirmed"
                    android:text="@string/confirmed"
                    android:textColor="#FD073A"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_light" />

                <TextView
                    android:id="@+id/txtDeltaConfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/txtConfirmed"
                    android:layout_toRightOf="@id/txtConfirmed"
                    android:text="[+0]"
                    android:textColor="#FD073A"
                    android:textSize="15sp"
                    app:fontFamily="@font/open_sans_light" />
            </RelativeLayout
>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="#007BFF"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtActive"
                    android:text="@string/active"
                    android:textColor="#007BFF"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_light" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginRight="5dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtRecovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="#36AD51"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtRecovered"
                    android:text="@string/recovered"
                    android:textColor="#36AD51"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_light" />

                <TextView
                    android:id="@+id/txtDeltaRecovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/txtRecovered"
                    android:layout_toRightOf="@id/txtRecovered"
                    android:text="[+0]"
                    android:textColor="#36AD51"
                    android:textSize="15sp"
                    app:fontFamily="@font/open_sans_light" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginLeft="5dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtDead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="#6C757D"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtDead"
                    android:text="@string/Deaths"
                    android:textColor="#6C757D"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_light" />


                <TextView
                    android:id="@+id/txtDeltaDead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/txtDead"
                    android:layout_toRightOf="@id/txtDead"
                    android:text="[+0]"
                    android:textColor="#6C757D"
                    android:textSize="15sp"
                    app:fontFamily="@font/open_sans_light" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_marginRight="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="#3A35AD"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTest"
                    android:text="Tested"
                    android:textColor="#3A35AD"
                    android:textSize="20sp"
                    app:fontFamily="@font/open_sans_light" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <!--<com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"/>-->

</RelativeLayout>