<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtLastUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="@string/lastUpdate"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardConfirmed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtLastUpdate">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtConfirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="#FD073A"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtConfirmed"
                        android:text="@string/confirmed"
                        android:textColor="#FD073A"
                        android:textSize="20sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtConfirmed" />

                    <TextView
                        android:id="@+id/txtDeltaConfirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="[+0]"
                        android:textColor="#FD073A"
                        android:textSize="15sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toEndOf="@id/txtConfirmed"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardActive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toStartOf="@id/cardRecovered"
                app:layout_constraintStart_toStartOf="@id/cardConfirmed"
                app:layout_constraintTop_toBottomOf="@id/cardConfirmed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="#007BFF"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvActiveLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtActive"
                        android:text="@string/active"
                        android:textColor="#007BFF"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtActive" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRecovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="@id/cardActive"
                app:layout_constraintEnd_toEndOf="@id/cardConfirmed"
                app:layout_constraintStart_toEndOf="@id/cardActive"
                app:layout_constraintTop_toTopOf="@id/cardActive">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtRecovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="#36AD51"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtRecovered"
                        android:text="@string/recovered"
                        android:textColor="#36AD51"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtRecovered" />

                    <TextView
                        android:id="@+id/txtDeltaRecovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_toEndOf="@id/txtRecovered"
                        android:layout_toRightOf="@id/txtRecovered"
                        android:text="[+0]"
                        android:textColor="#36AD51"
                        android:textSize="15sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toEndOf="@id/txtRecovered"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDeath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="@id/cardConfirmed"
                app:layout_constraintTop_toBottomOf="@id/cardActive"
                app:layout_constraintEnd_toEndOf="@+id/cardActive">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtDead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="#6C757D"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvDeathLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtDead"
                        android:text="@string/Deaths"
                        android:textColor="#6C757D"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtDead" />


                    <TextView
                        android:id="@+id/txtDeltaDead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="[+0]"
                        android:textColor="#6C757D"
                        android:textSize="15sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toEndOf="@id/txtDead"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTesting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="@id/cardDeath"
                app:layout_constraintEnd_toEndOf="@id/cardRecovered"
                app:layout_constraintStart_toStartOf="@id/cardRecovered"
                app:layout_constraintTop_toTopOf="@id/cardDeath">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="#3A35AD"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/open_sans"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtTest"
                        android:text="Tested"
                        android:textColor="#3A35AD"
                        android:textSize="18sp"
                        app:fontFamily="@font/open_sans_light"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtTest" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>